<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A9E2F3" >

    <LinearLayout
        android:id="@+id/aquariumCol1"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewAquariumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
            android:text="@string/aquarium_name" />
        <TextView
            android:id="@+id/textViewAquariumNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textIsSelectable="false" />
        
        
        <TextView
            android:id="@+id/textViewAquariumSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
            android:text="@string/aquarium_size" />
        <TextView
            android:id="@+id/textViewAquariumHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="5dp"
            android:text="@string/aquarium_height" />
        <TextView
            android:id="@+id/textViewAquariumHeightDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textIsSelectable="false" />         
        
        
        <TextView
            android:id="@+id/textViewAquariumLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
            android:text="@string/aquarium_length" />
        <TextView
            android:id="@+id/textViewAquariumLengthDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textIsSelectable="false" /> 
            
        
        <TextView
            android:id="@+id/textViewAquariumWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
            android:text="@string/aquarium_width" />
        <TextView
            android:id="@+id/textViewAquariumWidthDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textIsSelectable="false" />
        
        <TextView
            android:id="@+id/textViewAquariumLiters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
            android:text="@string/aquarium_liters" />
        <TextView
            android:id="@+id/textViewAquariumLitersDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textIsSelectable="false" />

        
        <TextView
            android:id="@+id/textViewAquariumFishList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
	        android:paddingBottom="12dp"
            android:text="@string/aquarium_fish_list" />        
        <ListView
            android:id="@+id/listViewFish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp" >
        </ListView>
                
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aquariumCol2"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/aquariumCol1"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/textViewAquariumParameters"
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="12dp"
		    android:paddingRight="12dp"
		    android:paddingTop="12dp"
		    android:text="@string/aquarium_parameters" />
        
        <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
			<LinearLayout
			    android:id="@+id/aquariumPhMin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
		       <TextView
		            android:id="@+id/textViewAquariumPhMin"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="12dp"
		            android:paddingRight="12dp"
		            android:paddingTop="5dp"            
		            android:text="@string/aquarium_ph_min" />
				<TextView
				    android:id="@+id/textViewAquariumPhMinDetail"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:paddingLeft="12dp"
				    android:paddingRight="12dp"
				    android:textIsSelectable="false" />
			</LinearLayout>
			<LinearLayout
			    android:id="@+id/aquariumPhMax"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/aquariumPhMin"
	            android:orientation="vertical"  >
			    <TextView
		       	    android:id="@+id/textViewAquariumPhMax"
		       	    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:paddingLeft="12dp"
		       	    android:paddingRight="12dp"
		            android:paddingTop="5dp"
		       	    android:text="@string/aquarium_ph_max" />
		        <TextView
		            android:id="@+id/textViewAquariumPhMaxDetail"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="12dp"
		            android:paddingRight="12dp"
		            android:textIsSelectable="false" />		    
			</LinearLayout> 
		</RelativeLayout>        
				
        
        <TextView
            android:id="@+id/textViewAquariumTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:text="@string/aquarium_temp" />
       <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
			<LinearLayout
			    android:id="@+id/aquariumTmin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
		       <TextView
		            android:id="@+id/textViewAquariumTempMin"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="12dp"
		            android:paddingRight="12dp"
		            android:text="@string/aquarium_temp_min" />
				<TextView
				    android:id="@+id/textViewAquariumTempMinDetail"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:paddingLeft="12dp"
				    android:paddingRight="12dp"
				    android:textIsSelectable="false" />
			</LinearLayout>			
			<LinearLayout
			    android:id="@+id/aquariumTmax"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/aquariumTmin"
	            android:orientation="vertical"  >
			    <TextView
		       	    android:id="@+id/textViewAquariumTempMax"
		       	    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:paddingLeft="12dp"
		       	    android:paddingRight="12dp"
		       	    android:text="@string/aquarium_temp_max" />
		        <TextView
		            android:id="@+id/textViewAquariumTempMaxDetail"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="12dp"
		            android:paddingRight="12dp" 
		            android:textIsSelectable="false"/>   
			</LinearLayout> 
	 </RelativeLayout>
	 
       <TextView 
           android:id="@+id/textViewAquariumLightOn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp"
           android:paddingRight="12dp"
           android:text="@string/aquarium_light_on"/>
       <TextView 
           android:id="@+id/textViewAquariumLightOnDetail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp"
           android:paddingRight="12dp"
           android:textIsSelectable="false"/>
       
       <TextView 
           android:id="@+id/textViewAquariumLightOff"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp"
           android:paddingRight="12dp"
           android:text="@string/aquarium_light_off"/>
       <TextView 
           android:id="@+id/textViewAquariumLightOffDetail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp"
           android:paddingRight="12dp"
           android:textIsSelectable="false"/>
        
       
        <TextView
            android:id="@+id/textViewAquariumPlantList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:paddingTop="12dp"
	        android:paddingBottom="12dp"
            android:text="@string/aquarium_plant_list" />        
        <ListView
            android:id="@+id/listViewPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
	        android:paddingRight="12dp" >
        </ListView>       
       
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/aquariumImage"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_toRightOf="@id/aquariumCol2"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/imageViewAquarium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bluethfish_logo"
            android:contentDescription="@string/image_description" />       
    </LinearLayout>  
    
    <RelativeLayout 
        android:id="@+id/aquariumButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@id/aquariumImage"
        android:layout_toRightOf="@id/aquariumCol2">
        
        <RelativeLayout 
            android:id="@+id/aquariumButtons2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
            >
            
            <Button
	            android:id="@+id/buttonAddFish"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/buttonAddPlant"
	            android:layout_alignRight="@+id/buttonAddPlant"
	            android:text="@string/button_add_fish"
	            style="?android:attr/buttonStyle" />
            
            <Button
	            android:id="@+id/buttonUpdateFish"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/buttonUpdatePlant"
	            android:layout_alignRight="@+id/buttonUpdatePlant"
	            android:layout_toRightOf="@id/buttonAddFish"
	            android:text="@string/button_update_fish"
	            style="?android:attr/buttonStyle" />
	
	        <Button
	            android:id="@+id/buttonRemoveFish"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/buttonRemovePlant"
	            android:layout_alignRight="@+id/buttonRemovePlant"
	            android:layout_toRightOf="@id/buttonUpdateFish"
	            android:text="@string/button_remove_fish"
	            style="?android:attr/buttonStyle" />
	
	        <Button
	            android:id="@+id/buttonAddPlant"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/buttonAddFish"
	            android:text="@string/button_add_plant"
	            style="?android:attr/buttonStyle" />
	        	        
	        <Button
	            android:id="@+id/buttonUpdatePlant"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/buttonUpdateFish"
	            android:layout_toRightOf="@id/buttonAddPlant"
	            android:text="@string/button_update_plant"
	            style="?android:attr/buttonStyle" />
	
	        <Button
	            android:id="@+id/buttonRemovePlant"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/buttonRemoveFish"
	            android:layout_toRightOf="@id/buttonUpdatePlant"
	            android:text="@string/button_remove_plant"
	            style="?android:attr/buttonStyle" />
	            
        </RelativeLayout>

        
        <Button
            android:id="@+id/buttonCalculateParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aquariumButtons2"
            android:layout_alignLeft="@id/aquariumButtons2"
            android:layout_alignRight="@id/aquariumButtons2"
            android:layout_centerHorizontal="true"
            android:text="@string/button_calculate_params"
            style="?android:attr/buttonStyle" />
        
        <Button
            android:id="@+id/buttonSensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonCalculateParams"
            android:layout_alignLeft="@id/buttonCalculateParams"
            android:layout_alignRight="@id/buttonCalculateParams"
            android:layout_centerHorizontal="true"
            android:text="@string/button_sensor"
            style="?android:attr/buttonStyle" />
        
    </RelativeLayout>
                
</RelativeLayout>