<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout 
        android:id="@+id/dialogRemoveList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
	    <ListView
	        android:id="@+id/listViewRemove"
	        android:layout_width="250dp"
	        android:layout_height="300dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp" >
	    </ListView>
	
	
	</RelativeLayout>    
    
    <LinearLayout
        android:id="@+id/buttonsRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogRemoveList"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_remove_list_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/button_cancel"
            style="?android:attr/buttonStyle" />
        <Button
            android:id="@+id/button_remove_all_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/button_remove_all"
            style="?android:attr/buttonStyle" />
        <Button
            android:id="@+id/button_remove_element_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/button_remove_element"
            style="?android:attr/buttonStyle" />      
    </LinearLayout>

</RelativeLayout>